[gd_scene load_steps=34 format=3 uid="uid://cffjdydocncdp"]

[ext_resource type="Script" path="res://assets/enemies/scripts/unknown_2.gd" id="1_jdoqe"]
[ext_resource type="Texture2D" uid="uid://des4sxh20x7xa" path="res://assets/enemies/sprites/Smoke.png" id="2_o3h3q"]
[ext_resource type="Texture2D" uid="uid://c8qgg5ysa1e11" path="res://assets/enemies/sprites/unknown.png" id="3_rw3ua"]
[ext_resource type="AudioStream" uid="uid://c5uxoqboq4g6m" path="res://assets/enemies/sound/stab.mp3" id="4_x3tqr"]
[ext_resource type="Texture2D" uid="uid://dmfmn0uhtjqok" path="res://assets/boss/sprites/line.png" id="5_dhywl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ricvp"]
atlas = ExtResource("2_o3h3q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iugc"]
atlas = ExtResource("2_o3h3q")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65a3q"]
atlas = ExtResource("2_o3h3q")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjy3r"]
atlas = ExtResource("2_o3h3q")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72tpq"]
atlas = ExtResource("2_o3h3q")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slljq"]
atlas = ExtResource("2_o3h3q")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpye1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ricvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iugc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65a3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjy3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72tpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slljq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_65ehs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("smoke:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("smoke:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite3D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle_right"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite3D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite3D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="Animation_g8wd4"]
resource_name = "charge"
length = 0.133337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"charge"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite3D:billboard")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("stab/stab:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u1ksq"]
resource_name = "charge_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"charge_start"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.533333, 0.6, 0.666667, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 8, 7, 8, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(2, 2, 2), Vector3(2, 2, 2), Vector3(2, 1, 2), Vector3(2, 2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.0382886, 0), Vector3(0, -0.0382886, 0), Vector3(0, -0.527253, 0), Vector3(0, -0.0382886, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("line:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1.96667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("line/Sprite3D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("stab/stab:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_charge"
}]
}

[sub_resource type="Animation" id="Animation_5gele"]
resource_name = "enter"
length = 0.46667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("smoke:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("smoke:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_charge_start"
}]
}

[sub_resource type="Animation" id="Animation_47bn4"]
resource_name = "exit"
length = 0.46667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("smoke:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("smoke:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qatgv"]
_data = {
"RESET": SubResource("Animation_65ehs"),
"charge": SubResource("Animation_g8wd4"),
"charge_start": SubResource("Animation_u1ksq"),
"enter": SubResource("Animation_5gele"),
"exit": SubResource("Animation_47bn4")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_q6v32"]
radius = 0.658773

[sub_resource type="AtlasTexture" id="AtlasTexture_650i0"]
atlas = ExtResource("3_rw3ua")
region = Rect2(900, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtpyy"]
atlas = ExtResource("3_rw3ua")
region = Rect2(1000, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iy0g"]
atlas = ExtResource("3_rw3ua")
region = Rect2(0, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nylhm"]
atlas = ExtResource("3_rw3ua")
region = Rect2(100, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkpmb"]
atlas = ExtResource("3_rw3ua")
region = Rect2(200, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3gap"]
atlas = ExtResource("3_rw3ua")
region = Rect2(300, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfmf8"]
atlas = ExtResource("3_rw3ua")
region = Rect2(400, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbgnk"]
atlas = ExtResource("3_rw3ua")
region = Rect2(500, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_peld8"]
atlas = ExtResource("3_rw3ua")
region = Rect2(600, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0csn0"]
atlas = ExtResource("3_rw3ua")
region = Rect2(700, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j70hw"]
atlas = ExtResource("3_rw3ua")
region = Rect2(800, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk38y"]
atlas = ExtResource("3_rw3ua")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6c4d"]
atlas = ExtResource("3_rw3ua")
region = Rect2(100, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xigp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_650i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtpyy")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iy0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nylhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkpmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3gap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfmf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbgnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peld8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0csn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j70hw")
}],
"loop": false,
"name": &"charge_start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk38y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6c4d")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}]

[node name="unknown_charge" type="CharacterBody3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_jdoqe")

[node name="smoke" type="AnimatedSprite3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0.398367)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_qpye1")
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qatgv")
}

[node name="cooldown" type="Timer" parent="."]

[node name="stab" type="Area3D" parent="."]

[node name="stab" type="CollisionShape3D" parent="stab"]
shape = SubResource("CylinderShape3D_q6v32")
disabled = true

[node name="remover" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_x3tqr")
bus = &"sfx"

[node name="line" type="Marker3D" parent="."]
visible = false

[node name="Sprite3D" type="Sprite3D" parent="line"]
transform = Transform3D(1, 0, 0, 0, -2.18557e-07, -1, 0, 5, -4.37114e-08, 0, -0.784341, -5.08477)
modulate = Color(1, 1, 1, 0)
texture = ExtResource("5_dhywl")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0382886, 0)
billboard = 2
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_3xigp")
animation = &"idle_right"
frame = 1

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="body_entered" from="stab" to="." method="_on_stab_body_entered"]
[connection signal="body_exited" from="stab" to="." method="_on_stab_body_exited"]
[connection signal="timeout" from="remover" to="." method="_on_remover_timeout"]
